Make the play button interactive

--- a/Music_Website.html
+++ b/Music_Website.html
@@ -22,7 +22,7 @@
     <div class="songList">
       <h1>Kumar Sanu Lovable Song</h1>
       <div class="songItem">
-        <img src="songItem.png" alt="Kumar Sanu"><br>
+        <img class="albumCover" src="Default.jpg" alt="Kumar Sanu"><br>
         <span>Dheere Dheere Se</span><br>
         <span class="timing">03:00</span>
       </div>
@@ -35,6 +35,7 @@
       <button class="backward"><i class="fa-3x fa-solid fa-backward"></i></button>
       <button class="Play2"><i class="fa-3x fa-solid fa-circle-play"></i></button>
       <button class="forward"><i class="fa-3x fa-solid fa-forward"></i></button>
+      <button class="pause"><i class="fa-3x fa-solid fa-circle-pause"></i></button>
     </div>
     <span class="musicName">dheere dheere se</span>
   </div>
