add song names in music.js and upload into the html

--- a/Music_Website.html
+++ b/Music_Website.html
@@ -23,7 +23,7 @@
       <h1>Kumar Sanu Lovable Song</h1>
       <div class="songItem">
         <img class="albumCover" src="Default.jpg" alt="Kumar Sanu"><br>
-        <span>Dheere Dheere Se</span><br>
+        <span class="musicName">Click Play To Listen</span><br>
         <span class="timing">03:00</span>
       </div>
     </div>
@@ -37,7 +37,7 @@
       <button class="forward"><i class="fa-3x fa-solid fa-forward"></i></button>
       <button class="pause"><i class="fa-3x fa-solid fa-circle-pause"></i></button>
     </div>
-    <span class="musicName">dheere dheere se</span>
+    <span class="musicName2">Click Play To Listen</span>
   </div>
   <script src="https://kit.fontawesome.com/741ec021b3.js" crossorigin="anonymous"></script>
   <script type="module" src="Music_Website.js"></script>
