--- a/Music_Website.html
+++ b/Music_Website.html
@@ -30,7 +30,7 @@
   </div>
 
   <div class="bottom">
-    <input type="range" id="myProgressBar" min="0" max="100">
+    <input type="range" id="myProgressBar" min="0" value="0" max="100">
     <div class="icons">
       <button class="backward"><i class="fa-3x fa-solid fa-backward"></i></button>
       <button class="Play2"><i class="fa-3x fa-solid fa-circle-play"></i></button>
