--- a/Music_Website.html
+++ b/Music_Website.html
@@ -24,7 +24,7 @@
       <div class="songItem">
         <img class="albumCover" src="Default.jpg" alt="Kumar Sanu"><br>
         <span class="musicName">Click Play To Listen</span><br>
-        <span class="timing">03:00</span>
+        <span class="timing"></span>
       </div>
     </div>
   </div>
@@ -38,6 +38,7 @@
       <button class="pause"><i class="fa-3x fa-solid fa-circle-pause"></i></button>
     </div>
     <span class="musicName2">Click Play To Listen</span>
+    <span class="CurrentTime">00:00</span>
   </div>
   <script src="https://kit.fontawesome.com/741ec021b3.js" crossorigin="anonymous"></script>
   <script type="module" src="Music_Website.js"></script>
