--- a/Music_Website.html
+++ b/Music_Website.html
@@ -20,11 +20,11 @@
   <div class="container">
     <!-- <img src="background.jpg" class="imageBack" alt="background"> -->
     <div class="songList">
-      <h1>Kumar Sanu Lovable Song</h1>
+      <h1>Offline Songs For You</h1>
       <div class="songItem">
         <img class="albumCover" src="Default.jpg" alt="Kumar Sanu"><br>
         <span class="musicName">Click Play To Listen</span><br>
-        <span class="timing"></span>
+        <span class="duration">00:00</span>
       </div>
     </div>
   </div>
@@ -37,7 +37,7 @@
       <button class="forward"><i class="fa-3x fa-solid fa-forward"></i></button>
       <button class="pause"><i class="fa-3x fa-solid fa-circle-pause"></i></button>
     </div>
-    <span class="musicName2">Click Play To Listen</span>
+    <span class="musicName name2">Click Play To Listen</span>
     <span class="currentTime">00:00</span>
   </div>
   <script src="https://kit.fontawesome.com/741ec021b3.js" crossorigin="anonymous"></script>
