add a disco ball gif

--- a/Music_Website.html
+++ b/Music_Website.html
@@ -16,6 +16,7 @@
   </nav>
 
   <img src="musicgif.gif" class="gifImage">
+  <img src="Disco-Ball.gif" class="discoBall">
 
   <div class="container">
     <!-- <img src="background.jpg" class="imageBack" alt="background"> -->
