Implemented volume and also applied keypress for shotcut

--- a/Music_Website.html
+++ b/Music_Website.html
@@ -32,6 +32,7 @@
 
   <div class="bottom">
     <input type="range" id="myProgressBar" min="0" value="0" max="100">
+
     <div class="icons">
       <button class="backward"><i class="fa-3x fa-solid fa-backward"></i></button>
       <button class="Play2"><i class="fa-3x fa-solid fa-circle-play"></i></button>
@@ -40,6 +41,8 @@
     </div>
     <span class="musicName name2">Click Play To Listen</span>
     <span class="currentTime">00:00</span>
+    <input type="range" id="myVolBtn" min="0" value="50" max="100">
+
   </div>
   <script src="https://kit.fontawesome.com/741ec021b3.js" crossorigin="anonymous"></script>
   <script type="module" src="Music_Website.js"></script>
