--- a/Music_Website.html
+++ b/Music_Website.html
@@ -7,10 +7,12 @@
   <link rel="stylesheet" href="Music_Website.css">
 </head>
 <body>
+
   <nav>
     <ul>
-      <li class="brand"><img src="musicBrand.png" alt="Music">Music</li>
-      <li>Home</li>
+      <li class="brand"><img src="musicBrand.png" alt="Music"></li>
+      <li>Music</li>
+      <li class="parent">Home</li>
       <li>About</li>
     </ul>
   </nav>
@@ -44,6 +46,7 @@
     <input type="range" id="myVolBtn" min="0" value="50" max="100">
 
   </div>
+
   <script src="https://kit.fontawesome.com/741ec021b3.js" crossorigin="anonymous"></script>
   <script type="module" src="Music_Website.js"></script>
 </body>
